--- a/movies.ipynb
+++ b/movies.ipynb
@@ -4,28 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. IMDb data from 2006 to 2016 analysis"
+    "# IMDb data from 2006 to 2016 analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1 Hypotheses:\n",
+    "## 1. Hypotheses:\n",
     "\n",
-    "#### 1. Is there any correlation between the number of title words and the number of votes?\n",
-    "#### 2. Did the most popular genre generated the most revenue in the given period?\n",
-    "#### 3. Does the length of movies (in minutes) have a positive impact on the IMDb ratings?\n",
-    "#### 4. Did the most popular director (taking into account IMDb rating and the number of votes) generated the most revenue (comparing witht the other directors?)\n",
-    "#### 5. Does the actor (actress) that appeared the most times tend to appear in movies ranked higher?\n",
-    "#### 6. Most"
+    "### 1. Is there any correlation between the number of title words and the number of votes?\n",
+    "### 2. Did the most popular genre generated the most revenue in the given period?\n",
+    "### 3. Does the length of movies (in minutes) have a positive impact on the IMDb ratings?\n",
+    "### 4. Did the most popular director (taking into account IMDb rating and the number of votes) generated the most revenue (comparing witht the other directors?)\n",
+    "### 5. Does the actor (actress) that appeared the most times tend to appear in movies ranked higher?\n",
+    "### 6. Most\n",
+    "\n",
+    "### 1.1. Dataset source: https://www.kaggle.com/PromptCloudHQ/imdb-data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 Importing and cleaning the data, adding new columns to expand the dataset and its analysis."
+    "# 2. Data analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Libraries used:"
    ]
   },
   {
@@ -38,10 +47,15 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "#pip install sqlalchemy\n",
-    "#pip install mysql-connector-python\n",
     "from skimage import data\n",
     "from skimage import io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2. Importing the data in CSV format."
    ]
   },
   {
@@ -51,6 +65,13 @@
    "outputs": [],
    "source": [
     "movies = pd.read_csv('IMDB-Movie-Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3. Analysis of raw, uncleaned data."
    ]
   },
   {
@@ -362,6 +383,17 @@
    ],
    "source": [
     "movies.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.4. Cleaning the data.\n",
+    "### 2.4.1. Finding the null values;\n",
+    "### 2.4.2. Dropping the duplicates;\n",
+    "### 2.4.3. Renaming the columns;\n",
+    "### 2.4.4. Dropping the null values."
    ]
   },
   {
@@ -839,7 +871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding new columns to expand the dataset in order implement new observations"
+    "### 2.5. Adding new columns to expand the dataset in order implement new observations."
    ]
   },
   {
@@ -854,21 +886,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 630,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/d0/hq4rwgj90r72xzxl8829mkn00000gn/T/ipykernel_44280/1106650964.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  movies['Title_words'] = movies['Title'].map(word_count)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -890,6 +910,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Revenue_millions</th>\n",
        "      <th>Rank</th>\n",
        "      <th>Title</th>\n",
        "      <th>Genre</th>\n",
@@ -900,76 +921,153 @@
        "      <th>Runtime</th>\n",
        "      <th>IMDb_rating</th>\n",
        "      <th>Votes</th>\n",
-       "      <th>Revenue_millions</th>\n",
        "      <th>Metascore</th>\n",
        "      <th>Title_words</th>\n",
+       "      <th>IMDb_rating_Metascore</th>\n",
+       "      <th>Main_genres</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Guardians of the Galaxy</td>\n",
-       "      <td>Action,Adventure,Sci-Fi</td>\n",
-       "      <td>A group of intergalactic criminals are forced ...</td>\n",
-       "      <td>James Gunn</td>\n",
-       "      <td>Chris Pratt, Vin Diesel, Bradley Cooper, Zoe S...</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>121</td>\n",
+       "      <td>936.63</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Star Wars: Episode VII - The Force Awakens</td>\n",
+       "      <td>Action,Adventure,Fantasy</td>\n",
+       "      <td>Three decades after the defeat of the Galactic...</td>\n",
+       "      <td>J.J. Abrams</td>\n",
+       "      <td>Daisy Ridley</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>136</td>\n",
        "      <td>8.1</td>\n",
-       "      <td>757074</td>\n",
-       "      <td>333.13</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>661608</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>89.1</td>\n",
+       "      <td>Action</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Prometheus</td>\n",
-       "      <td>Adventure,Mystery,Sci-Fi</td>\n",
-       "      <td>Following clues to the origin of mankind, a te...</td>\n",
-       "      <td>Ridley Scott</td>\n",
-       "      <td>Noomi Rapace, Logan Marshall-Green, Michael Fa...</td>\n",
-       "      <td>2012</td>\n",
+       "      <td>760.51</td>\n",
+       "      <td>88</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>Action,Adventure,Fantasy</td>\n",
+       "      <td>A paraplegic marine dispatched to the moon Pan...</td>\n",
+       "      <td>James Cameron</td>\n",
+       "      <td>Sam Worthington</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>162</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>935408</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>90.8</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>652.18</td>\n",
+       "      <td>86</td>\n",
+       "      <td>Jurassic World</td>\n",
+       "      <td>Action,Adventure,Sci-Fi</td>\n",
+       "      <td>A new theme park, built on the original site o...</td>\n",
+       "      <td>Colin Trevorrow</td>\n",
+       "      <td>Chris Pratt</td>\n",
+       "      <td>2015</td>\n",
        "      <td>124</td>\n",
        "      <td>7.0</td>\n",
-       "      <td>485820</td>\n",
-       "      <td>126.46</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>455169</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>623.28</td>\n",
+       "      <td>77</td>\n",
+       "      <td>The Avengers</td>\n",
+       "      <td>Action,Sci-Fi</td>\n",
+       "      <td>Earth's mightiest heroes must come together an...</td>\n",
+       "      <td>Joss Whedon</td>\n",
+       "      <td>Robert Downey Jr.</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>143</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>1045588</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>533.32</td>\n",
+       "      <td>55</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>Action,Crime,Drama</td>\n",
+       "      <td>When the menace known as the Joker wreaks havo...</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>Christian Bale</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>152</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1791916</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>Action</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Rank                    Title                     Genre  \\\n",
-       "0     1  Guardians of the Galaxy   Action,Adventure,Sci-Fi   \n",
-       "1     2               Prometheus  Adventure,Mystery,Sci-Fi   \n",
+       "   Revenue_millions  Rank                                       Title  \\\n",
+       "0            936.63    51  Star Wars: Episode VII - The Force Awakens   \n",
+       "1            760.51    88                                      Avatar   \n",
+       "2            652.18    86                              Jurassic World   \n",
+       "3            623.28    77                                The Avengers   \n",
+       "4            533.32    55                             The Dark Knight   \n",
        "\n",
-       "                                         Description      Director  \\\n",
-       "0  A group of intergalactic criminals are forced ...    James Gunn   \n",
-       "1  Following clues to the origin of mankind, a te...  Ridley Scott   \n",
+       "                      Genre  \\\n",
+       "0  Action,Adventure,Fantasy   \n",
+       "1  Action,Adventure,Fantasy   \n",
+       "2   Action,Adventure,Sci-Fi   \n",
+       "3             Action,Sci-Fi   \n",
+       "4        Action,Crime,Drama   \n",
        "\n",
-       "                                              Actors  Year  Runtime  \\\n",
-       "0  Chris Pratt, Vin Diesel, Bradley Cooper, Zoe S...  2014      121   \n",
-       "1  Noomi Rapace, Logan Marshall-Green, Michael Fa...  2012      124   \n",
+       "                                         Description           Director  \\\n",
+       "0  Three decades after the defeat of the Galactic...        J.J. Abrams   \n",
+       "1  A paraplegic marine dispatched to the moon Pan...      James Cameron   \n",
+       "2  A new theme park, built on the original site o...    Colin Trevorrow   \n",
+       "3  Earth's mightiest heroes must come together an...        Joss Whedon   \n",
+       "4  When the menace known as the Joker wreaks havo...  Christopher Nolan   \n",
        "\n",
-       "   IMDb_rating   Votes  Revenue_millions  Metascore  Title_words  \n",
-       "0          8.1  757074            333.13       76.0            4  \n",
-       "1          7.0  485820            126.46       65.0            1  "
+       "              Actors  Year  Runtime  IMDb_rating    Votes  Metascore  \\\n",
+       "0       Daisy Ridley  2015      136          8.1   661608       81.0   \n",
+       "1    Sam Worthington  2009      162          7.8   935408       83.0   \n",
+       "2        Chris Pratt  2015      124          7.0   455169       59.0   \n",
+       "3  Robert Downey Jr.  2012      143          8.1  1045588       69.0   \n",
+       "4     Christian Bale  2008      152          9.0  1791916       82.0   \n",
+       "\n",
+       "   Title_words  IMDb_rating_Metascore Main_genres  \n",
+       "0            8                   89.1      Action  \n",
+       "1            1                   90.8      Action  \n",
+       "2            2                   66.0      Action  \n",
+       "3            2                   77.1      Action  \n",
+       "4            3                   91.0      Action  "
       ]
      },
-     "execution_count": 575,
+     "execution_count": 630,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Adding new column to find out the total number of words in each of the movie title.\n",
     "movies['Title_words'] = movies['Title'].map(word_count)\n",
-    "movies.head(2)\n",
-    "\n",
-    "# Adding new column to find out the total number of words in each of the movie title."
+    "movies.head(5)"
    ]
   },
   {
@@ -1021,6 +1119,13 @@
     "movies_imdb_metascore.iloc[0]\n",
     "# Combining both IMDb rating and Metascore, movie 'Boyhood' appears to be in the first position. However, Metascore rating doesn't provide additional information\n",
     "# on how many votes there were in total. Hence, this combined rating isn't that much trusted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.5.1. Analysis of cleaned data."
    ]
   },
   {
@@ -1391,43 +1496,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 580,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1791916\n",
-      "178\n"
-     ]
-    }
-   ],
    "source": [
-    "print(movies['Votes'].max())\n",
-    "print(movies['Votes'].min())"
+    "# Testing the hypotheses."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Data analysis (proving the validity of the hypotheses)"
+    "## 3.1. Does the length of movies (in minutes) have a positive impact on the IMDb ratings?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1. Does the length of movies (in minutes) have a positive impact on the IMDb ratings?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.1..1 Testing to see correlation between IMDb rating and runtime."
+    "### 3.1.1. Testing to see correlation between IMDb rating and runtime."
    ]
   },
   {
@@ -1537,14 +1623,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2. Is there a strong relation between the IMDb rating and Metascore?"
+    "## 3.2. Is there a strong relation between the IMDb rating and Metascore?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2.1 Tesing to see the correlation between the IMDb rating and the Metascore."
+    "### 3.2.1. Tesing to see the correlation between the IMDb rating and the Metascore."
    ]
   },
   {
@@ -1610,14 +1696,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3. Is there a positive correlation between the number of votes and the revenue (in millions?)"
+    "## 3.3. Is there a positive correlation between the number of votes and the revenue (in millions?)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.3.1 Testing to see the correlation between the number of votes and revenue."
+    "### 3.3.1. Testing to see the correlation between the number of votes and revenue."
    ]
   },
   {
@@ -1710,21 +1796,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Displaying Top 10 Highest Revenue Movie Titles."
+    "## 3.4. Did the most popular director in each of the following year intervals: 2006 to 2009; 2010 - 2016 (taking into consideration IMDd rating and the count of the votes) generated the most revenue?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.4. Did the most popular director in each of the following year intervals: 2006 to 2009; 2010 - 2016 (taking into consideration IMDd rating and the count of the votes) generated the most revenue?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2.4.1. Displaying top 10 highest revenue movie titles."
+    "### 3.4.1. Displaying top 10 highest revenue movie titles."
    ]
   },
   {
@@ -1765,7 +1844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.4.2. Finding out the percentage sizes of how many movies were created in every year."
+    "### 3.4.2. Finding out the percentage sizes of how many movies were created in every year."
    ]
   },
   {
@@ -1841,7 +1920,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.4.3. Testing to see if the most popular director in the given time intervals (taking into account IMDb rating and the count of the votes) also generatef the most revenue?"
+    "### 3.4.3. Testing to see if the most popular director in the given time intervals (taking into account IMDb rating and the count of the votes) also generatef the most revenue?"
    ]
   },
   {
@@ -2302,14 +2381,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Among the 6 best films of the decade (out of 838) in terms of IMDb rating and number of the votes, Christopher Nolan is the most popular director, who created 5 out of 6 best rated movies."
+    "## Among the 6 best films of the decade (out of 838) in terms of IMDb rating and number of the votes, Christopher Nolan is the most popular director, who created 5 out of 6 best rated movies."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.4.4. Testing to see if the most popular director of the decade (Christopher Noland) also generated the most revenue."
+    "### 3.4.4. Testing to see if the most popular director of the decade (Christopher Noland) also generated the most revenue."
    ]
   },
   {
@@ -2352,8 +2431,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hypothesis, if the most popular director of the decade (Christopher Nolan) generated the most revenue is denied.\n",
-    "#### Christopher Nolan ranks 3rd out of 524 unique directors with 1515 million dollars of generated revenue."
+    "## Hypothesis, if the most popular director of the decade (Christopher Nolan) generated the most revenue is denied.\n",
+    "## Christopher Nolan ranks 3rd out of 524 unique directors with 1515 million dollars of generated revenue."
    ]
   },
   {
@@ -2804,8 +2883,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hypothesis: If the most popular director (according to IMDb ranking and the number of votes) generated the most revenue is rejected.\n",
-    "#### Christopher Nolan ranks 3rd from 524 unique directors."
+    "## Hypothesis: If the most popular director (according to IMDb ranking and the number of votes) generated the most revenue is rejected.\n",
+    "## Christopher Nolan ranks 3rd from 524 unique directors."
    ]
   },
   {
@@ -2819,7 +2898,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.5.1. Finding the most popular genre."
+    "### 2.5.1. Finding the most popular genre."
    ]
   },
   {
@@ -3041,7 +3120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.5.2. Testing if the most popular genre (Action), generated the most revenue."
+    "### 2.5.2. Testing if the most popular genre (Action), generated the most revenue."
    ]
   },
   {
