--- a/movies.ipynb
+++ b/movies.ipynb
@@ -1920,7 +1920,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4.3. Testing to see if the most popular director in the given time intervals (taking into account IMDb rating and the count of the votes) also generatef the most revenue?"
+    "### 3.4.3. Testing to see if the most popular director in the given time intervals (taking into account IMDb rating and the count of the votes) also generated the most revenue."
    ]
   },
   {
@@ -2381,7 +2381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Among the 6 best films of the decade (out of 838) in terms of IMDb rating and number of the votes, Christopher Nolan is the most popular director, who created 5 out of 6 best rated movies."
+    "### Among the 6 best films of the decade (out of 838) in terms of IMDb rating and number of the votes, Christopher Nolan is the most popular director, who created 5 out of 6 best rated movies."
    ]
   },
   {
@@ -2431,8 +2431,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypothesis, if the most popular director of the decade (Christopher Nolan) generated the most revenue is denied.\n",
+    "## The most popular director of the decade (Christopher Nolan) did not generate the most revenue.\n",
     "## Christopher Nolan ranks 3rd out of 524 unique directors with 1515 million dollars of generated revenue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4.5. Comparing Christopher Nolan with the director who generated the most revenue."
    ]
   },
   {
@@ -2883,22 +2890,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hypothesis: If the most popular director (according to IMDb ranking and the number of votes) generated the most revenue is rejected.\n",
-    "## Christopher Nolan ranks 3rd from 524 unique directors."
+    "### Hypothesis: 'Did the most popular director (according to IMDb ranking and the number of votes) generated the most revenue?' is rejected.\n",
+    "### Christopher Nolan ranks 3rd from 524 unique directors."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.5.  Did the most popular genre generated the most revenue in the period 2006-2016?"
+    "## 3.5.  Did the most popular genre generated the most revenue in the period 2006-2016?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5.1. Finding the most popular genre."
+    "### 3.5.1. Finding the most popular genre."
    ]
   },
   {
@@ -3120,7 +3127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5.2. Testing if the most popular genre (Action), generated the most revenue."
+    "### 3.5.2. Testing if the most popular genre (Action), generated the most revenue."
    ]
   },
   {
@@ -3486,14 +3493,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Hypothesis confirmed, the most popular genre (Action), (268/838 movies), generated the most revenue (33403.82 million)."
+    "### Hypothesis confirmed, the most popular genre (Action), (268/838 movies), generated the most revenue (33403.82 million)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.5.3. Comparison of movies that generated the most/the least revenue."
+    "### 3.5.3. Comparison of movies that generated the most/the least revenue."
    ]
   },
   {
@@ -3764,7 +3771,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2.6. Does the actor (actress) who appeared the most times tend to appear in movies ranked higher?"
+    "## 3.6. Does the actor (actress) who appeared the most times tend to appear in movies ranked higher?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.6.1. Finding the actor (actress) who appeared the most times."
    ]
   },
   {
@@ -3974,15 +3988,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Most popular actors: Christian Bale and Mark Wahlberg have been in movies that generated 1559.62 and 1052.09 million dollars."
+    "### Most popular actors - Christian Bale and Mark Wahlberg - were acting in movies that generated 1559.62 and 1052.09 million dollars in total, respectively."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
