--- a/movies.ipynb
+++ b/movies.ipynb
@@ -4063,7 +4063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 658,
    "metadata": {},
    "outputs": [
     {
@@ -4377,7 +4377,7 @@
        "[838 rows x 15 columns]"
       ]
      },
-     "execution_count": 657,
+     "execution_count": 658,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4391,6 +4391,15 @@
    "metadata": {},
    "source": [
     "### Most popular actors - Christian Bale and Mark Wahlberg - were acting in movies that generated 1559.62 and 1052.09 million dollars in total, respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = movies[]"
    ]
   },
   {
