--- a/movies.ipynb
+++ b/movies.ipynb
@@ -13,12 +13,12 @@
    "source": [
     "## 1. Hypotheses:\n",
     "\n",
-    "### 1. Is there any correlation between the number of title words and the number of votes?\n",
-    "### 2. Did the most popular genre generated the most revenue in the given period?\n",
-    "### 3. Does the length of movies (in minutes) have a positive impact on the IMDb ratings?\n",
-    "### 4. Did the most popular director (taking into account IMDb rating and the number of votes) generated the most revenue (comparing witht the other directors?)\n",
-    "### 5. Does the actor (actress) that appeared the most times tend to appear in movies ranked higher?\n",
-    "### 6. Most\n",
+    "### 1. Does the length of movies (in minutes) have a positive impact on the IMDb ratings?\n",
+    "### 2. Is there a strong relation between the IMDb rating and Metascore?\n",
+    "### 3. Is there a positive correlation between the number of votes and the revenue (in millions?)\n",
+    "### 4. Did the most popular director in each of the following year intervals: 2006 to 2009; 2010 - 2016 (taking into consideration IMDd rating and the count of the votes) generated the most revenue?\n",
+    "### 5. Did the most popular genre generated the most revenue in the period 2006-2016?\n",
+    "### 6. Did the actors (actresses) who appeared the most times acted in the movies that generated more than 1 billion dollars in total?\n",
     "\n",
     "### 1.1. Dataset source: https://www.kaggle.com/PromptCloudHQ/imdb-data"
    ]
@@ -4595,6 +4595,13 @@
    "outputs": [],
    "source": [
     "from PIL import Image, ImageFilter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Conclusions."
    ]
   }
  ],
