--- a/movies.ipynb
+++ b/movies.ipynb
@@ -4603,6 +4603,27 @@
    "source": [
     "# 4. Conclusions."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. The length of a movie doesn't have a big impact on the IMDb ratings being higher. Although there is a positive correlation between the two variables, it is a weak correlation. Rejected.\n",
+    "### 2. There is a moderately strong positive correlation between the IMDb and Metascore ratings, with a correlation coeffcient of 0.67. Approved.\n",
+    "### 3. The findings show that there is a moderately strong positive correlation (0.64) between the number of votes and the revenue in general.\n",
+    "### Number of votes indicate the popularity of a movie, and popular movies ten to generate more revenue. Approved.\n",
+    "### 4. The most popular director of the decade (in terms of IMDb ratings and the number of votes), Christopher Nolan, did not generate the most revenue from his movies.\n",
+    "### He ranks 3rd out of 524 unique directors (in terms of generated revenue), even though he created 5 out of 6 best movies in the last decade. Rejected.\n",
+    "### The most popular genre was Action genre and it has generated the most revenue during the given period. Approved.\n",
+    "### The actors that appeared the most times have acted in the movies that generated more than 1 billion dollars in total. Approved.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
