--- a/companies.ipynb
+++ b/companies.ipynb
@@ -469,6 +469,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.506666666666666"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[dataset['VAT_excluded'] == 11.9652]['amount'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6352     13.60\n",
+       "6353      9.28\n",
+       "10494    25.86\n",
+       "10495    15.42\n",
+       "13261     9.28\n",
+       "13262    13.60\n",
+       "Name: amount, dtype: float64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[dataset['VAT_excluded'] == 11.9652]['amount']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
